--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:image" content="/previewPage.png" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Steven Garcia Portfolio"
     />
     <meta name="title" property="og:title" content="Steven Garcia Portfolio" />
-    <meta name="image" property="og:image" content="./previewPage.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
